--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
     runtime-versions:
       nodejs: 10
     commands:
-      - npm install serverless
+      - npm ci
   build:
     commands:
       - ./node_modules/.bin/sls package
