--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,7 +8,8 @@ phases:
   build:
     commands:
       - ./node_modules/.bin/sls package
-      - sed -i .serverless/serverless-state.json 's/"artifact": "[^"]*.serverless/"artifact": ".serverless/'
+      - |
+        sed -i .serverless/serverless-state.json 's/"artifact": "[^"]*.serverless/"artifact": ".serverless/'
 artifacts:
   files:
     - '.serverless/**/*'
